--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Aug 30 2024 12:23:17 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Aug 30 2024 14:54:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66c5e604eed1e53e29cc537a" data-wf-site="66c5e604eed1e53e29cc5321">
 <head>
   <meta charset="utf-8">
@@ -63,7 +63,7 @@
                   <div class="margin-top margin-medium">
                     <div class="button-group">
                       <a href="https://wa.me/522218310486" class="button w-button">Contacto</a>
-                      <a href="https://wa.me/522218310486" class="button is-secondary w-button">Más productos</a>
+                      <a href="#" class="button is-secondary w-button">Más productos</a>
                     </div>
                   </div>
                 </div>
@@ -692,7 +692,7 @@
               </div>
             </div>
             <div class="contact14_map-wrapper">
-              <div class="contact14_map w-widget w-widget-map" data-widget-style="roadmap" data-widget-latlng="" data-enable-scroll="true" role="" title="" data-enable-touch="true" data-widget-zoom="12" data-widget-tooltip=""></div>
+              <div class="contact14_map w-widget w-widget-map" data-widget-style="roadmap" data-widget-latlng="19.0441287,-98.22763669999999" data-enable-scroll="true" role="" title="" data-enable-touch="true" data-widget-zoom="9" data-widget-tooltip=""></div>
             </div>
           </div>
         </div>
