--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Aug 30 2024 14:54:16 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Aug 30 2024 14:56:39 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66c5e604eed1e53e29cc537a" data-wf-site="66c5e604eed1e53e29cc5321">
 <head>
   <meta charset="utf-8">
@@ -63,7 +63,7 @@
                   <div class="margin-top margin-medium">
                     <div class="button-group">
                       <a href="https://wa.me/522218310486" class="button w-button">Contacto</a>
-                      <a href="#" class="button is-secondary w-button">Más productos</a>
+                      <a href="#Productos" class="button is-secondary w-button">Más productos</a>
                     </div>
                   </div>
                 </div>
@@ -97,7 +97,7 @@
           <div class="w-layout-grid layout379_component">
             <div id="w-node-_4c5cb823-2318-d444-81a0-73cba941d3aa-29cc537a" class="w-layout-grid layout379_row">
               <div id="w-node-_4c5cb823-2318-d444-81a0-73cba941d3ab-29cc537a" class="layout379_card-large">
-                <div id="w-node-_4c5cb823-2318-d444-81a0-73cba941d3ac-29cc537a" class="layout379_card-large-image-wrapper"><img src="images/Screenshot-2024-08-22-150604.png" loading="lazy" sizes="(max-width: 632px) 90vw, 569px" srcset="images/Screenshot-2024-08-22-150604-p-500.png 500w, images/Screenshot-2024-08-22-150604.png 569w" alt="" class="layout379_card-large-image"></div>
+                <div id="w-node-_4c5cb823-2318-d444-81a0-73cba941d3ac-29cc537a" class="layout379_card-large-image-wrapper"><img src="images/Screenshot-2024-08-22-150604.png" loading="lazy" sizes="100vw" srcset="images/Screenshot-2024-08-22-150604-p-500.png 500w, images/Screenshot-2024-08-22-150604.png 569w" alt="" class="layout379_card-large-image"></div>
                 <div class="layout379_card-large-content">
                   <div class="layout379_card-large-content-top">
                     <div class="margin-bottom margin-xxsmall"></div>
@@ -179,7 +179,7 @@
                 </div>
               </div>
               <div id="w-node-_4c5cb823-2318-d444-81a0-73cba941d3e0-29cc537a" class="layout379_card-medium">
-                <div id="w-node-_4c5cb823-2318-d444-81a0-73cba941d3e1-29cc537a" class="layout379_card-medium-image-wrapper"><img src="images/Screenshot-2024-08-22-145053.png" loading="lazy" sizes="(max-width: 479px) 90vw, 45vw" srcset="images/Screenshot-2024-08-22-145053-p-500.png 500w, images/Screenshot-2024-08-22-145053.png 565w" alt="" class="layout379_card-medium-image"></div>
+                <div id="w-node-_4c5cb823-2318-d444-81a0-73cba941d3e1-29cc537a" class="layout379_card-medium-image-wrapper"><img src="images/Screenshot-2024-08-22-145053.png" loading="lazy" sizes="100vw" srcset="images/Screenshot-2024-08-22-145053-p-500.png 500w, images/Screenshot-2024-08-22-145053.png 565w" alt="" class="layout379_card-medium-image"></div>
                 <div class="layout379_card-medium-content">
                   <div class="layout379_card-medium-content-top">
                     <div class="margin-bottom margin-xxsmall"></div>
