--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Wed Sep 04 2024 18:32:52 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Wed Sep 04 2024 18:38:18 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66c5e604eed1e53e29cc537a" data-wf-site="66c5e604eed1e53e29cc5321">
 <head>
   <meta charset="utf-8">
@@ -746,7 +746,7 @@
               </div>
             </div>
             <div class="contact14_map-wrapper">
-              <div class="contact14_map w-widget w-widget-map" data-widget-style="roadmap" data-widget-latlng="19.0441287,-98.22763669999999" data-enable-scroll="true" role="" title="" data-enable-touch="true" data-widget-zoom="9" data-widget-tooltip=""></div>
+              <div class="contact14_map w-widget w-widget-map" data-widget-style="hybrid" data-widget-latlng="19.0441287,-98.22763669999999" data-enable-scroll="true" role="" title="" data-enable-touch="true" data-widget-zoom="18" data-widget-tooltip=""></div>
             </div>
           </div>
         </div>
