cambios de imagenes

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Wed Sep 04 2024 18:38:18 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Wed Sep 04 2024 19:38:21 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66c5e604eed1e53e29cc537a" data-wf-site="66c5e604eed1e53e29cc5321">
 <head>
   <meta charset="utf-8">
@@ -243,6 +243,15 @@
               <div class="gallery16_mask w-slider-mask">
                 <div class="gallery16_slide w-slide">
                   <a href="#" class="gallery16_lightbox-link w-inline-block w-lightbox">
+                    <div class="gallery16_image-wrapper"><img src="images/snapedit_1724372971618.png" loading="lazy" sizes="(max-width: 479px) 85vw, (max-width: 767px) 87vw, (max-width: 991px) 42vw, 43vw" srcset="images/snapedit_1724372971618-p-500.png 500w, images/snapedit_1724372971618.png 586w" alt="" class="gallery16_image"></div>
+                    <script type="application/json" class="w-json">{
+  "items": [],
+  "group": ""
+}</script>
+                  </a>
+                </div>
+                <div class="gallery16_slide w-slide">
+                  <a href="#" class="gallery16_lightbox-link w-inline-block w-lightbox">
                     <div class="gallery16_image-wrapper"><img src="images/snapedit_1725463930414.png" loading="lazy" sizes="(max-width: 479px) 85vw, (max-width: 767px) 87vw, (max-width: 991px) 42vw, 43vw" srcset="images/snapedit_1725463930414-p-500.png 500w, images/snapedit_1725463930414-p-800.png 800w, images/snapedit_1725463930414.png 1105w" alt="" class="gallery16_image"></div>
                     <script type="application/json" class="w-json">{
   "items": [],
@@ -252,7 +261,7 @@
                 </div>
                 <div class="gallery16_slide w-slide">
                   <a href="#" class="gallery16_lightbox-link w-inline-block w-lightbox">
-                    <div class="gallery16_image-wrapper"><img src="images/Screenshot-2024-08-22-145755.png" loading="lazy" sizes="(max-width: 479px) 85vw, (max-width: 767px) 87vw, (max-width: 991px) 42vw, 43vw" srcset="images/Screenshot-2024-08-22-145755-p-500.png 500w, images/Screenshot-2024-08-22-145755.png 580w" alt="" class="gallery16_image"></div>
+                    <div class="gallery16_image-wrapper"><img src="images/snapedit_1725463910941.png" loading="lazy" sizes="(max-width: 479px) 85vw, (max-width: 767px) 87vw, (max-width: 991px) 42vw, 43vw" srcset="images/snapedit_1725463910941-p-500.png 500w, images/snapedit_1725463910941-p-800.png 800w, images/snapedit_1725463910941.png 1124w" alt="" class="gallery16_image"></div>
                     <script type="application/json" class="w-json">{
   "items": [],
   "group": ""
@@ -270,52 +279,7 @@
                 </div>
                 <div class="gallery16_slide w-slide">
                   <a href="#" class="gallery16_lightbox-link w-inline-block w-lightbox">
-                    <div class="gallery16_image-wrapper"><img src="images/SALA-ATLANTIS__005.JPG" loading="lazy" sizes="(max-width: 479px) 85vw, (max-width: 767px) 87vw, (max-width: 991px) 42vw, 43vw" srcset="images/SALA-ATLANTIS__005-p-500.jpg 500w, images/SALA-ATLANTIS__005-p-800.jpg 800w, images/SALA-ATLANTIS__005-p-1080.jpg 1080w, images/SALA-ATLANTIS__005-p-1600.jpg 1600w, images/SALA-ATLANTIS__005-p-2000.jpg 2000w, images/SALA-ATLANTIS__005-p-2600.jpg 2600w, images/SALA-ATLANTIS__005-p-3200.jpg 3200w, images/SALA-ATLANTIS__005.JPG 5184w" alt="" class="gallery16_image"></div>
-                    <script type="application/json" class="w-json">{
-  "items": [],
-  "group": ""
-}</script>
-                  </a>
-                </div>
-                <div class="gallery16_slide w-slide">
-                  <a href="#" class="gallery16_lightbox-link w-inline-block w-lightbox">
-                    <div class="gallery16_image-wrapper"><img src="images/snapedit_1724372971618.png" loading="lazy" sizes="(max-width: 479px) 85vw, (max-width: 767px) 87vw, (max-width: 991px) 42vw, 43vw" srcset="images/snapedit_1724372971618-p-500.png 500w, images/snapedit_1724372971618.png 586w" alt="" class="gallery16_image"></div>
-                    <script type="application/json" class="w-json">{
-  "items": [],
-  "group": ""
-}</script>
-                  </a>
-                </div>
-                <div class="gallery16_slide w-slide">
-                  <a href="#" class="gallery16_lightbox-link w-inline-block w-lightbox">
-                    <div class="gallery16_image-wrapper"><img src="images/Screenshot-2024-08-22-144829.png" loading="lazy" sizes="(max-width: 479px) 85vw, (max-width: 767px) 87vw, (max-width: 991px) 42vw, 43vw" srcset="images/Screenshot-2024-08-22-144829-p-500.png 500w, images/Screenshot-2024-08-22-144829.png 589w" alt="" class="gallery16_image"></div>
-                    <script type="application/json" class="w-json">{
-  "items": [],
-  "group": ""
-}</script>
-                  </a>
-                </div>
-                <div class="gallery16_slide w-slide">
-                  <a href="#" class="gallery16_lightbox-link w-inline-block w-lightbox">
-                    <div class="gallery16_image-wrapper"><img src="images/Screenshot-2024-08-22-150525.png" loading="lazy" sizes="(max-width: 479px) 85vw, (max-width: 767px) 87vw, (max-width: 991px) 42vw, 43vw" srcset="images/Screenshot-2024-08-22-150525-p-500.png 500w, images/Screenshot-2024-08-22-150525.png 587w" alt="" class="gallery16_image"></div>
-                    <script type="application/json" class="w-json">{
-  "items": [],
-  "group": ""
-}</script>
-                  </a>
-                </div>
-                <div class="gallery16_slide w-slide">
-                  <a href="#" class="gallery16_lightbox-link w-inline-block w-lightbox">
-                    <div class="gallery16_image-wrapper"><img src="images/Screenshot-2024-08-22-145004.png" loading="lazy" alt="" class="gallery16_image"></div>
-                    <script type="application/json" class="w-json">{
-  "items": [],
-  "group": ""
-}</script>
-                  </a>
-                </div>
-                <div class="gallery16_slide w-slide">
-                  <a href="#" class="gallery16_lightbox-link w-inline-block w-lightbox">
-                    <div class="gallery16_image-wrapper"><img src="images/Screenshot-2024-08-22-145505.png" loading="lazy" sizes="(max-width: 479px) 85vw, (max-width: 767px) 87vw, (max-width: 991px) 42vw, 43vw" srcset="images/Screenshot-2024-08-22-145505-p-500.png 500w, images/Screenshot-2024-08-22-145505.png 587w" alt="" class="gallery16_image"></div>
+                    <div class="gallery16_image-wrapper"><img src="images/Screenshot-2024-09-04-143639.png" loading="lazy" alt="" class="gallery16_image"></div>
                     <script type="application/json" class="w-json">{
   "items": [],
   "group": ""
