--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Sep 06 2024 12:16:35 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Sep 06 2024 12:28:32 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66c5e604eed1e53e29cc537a" data-wf-site="66c5e604eed1e53e29cc5321">
 <head>
   <meta charset="utf-8">
@@ -70,8 +70,8 @@
               </div>
             </div>
             <div class="header118_image-group">
-              <div class="header118_image-wrapper1"><img src="images/snapedit_1725464151349.png" loading="eager" sizes="(max-width: 767px) 23vw, 24vw" srcset="images/snapedit_1725464151349-p-500.png 500w, images/snapedit_1725464151349-p-800.png 800w, images/snapedit_1725464151349.png 1080w" alt="" class="header118_image1"></div>
-              <div class="header118_image-wrapper2"><img src="images/snapedit_1725464072829.png" loading="eager" sizes="(max-width: 479px) 34vw, (max-width: 767px) 35vw, 36vw" srcset="images/snapedit_1725464072829-p-500.png 500w, images/snapedit_1725464072829-p-800.png 800w, images/snapedit_1725464072829-p-1080.png 1080w, images/snapedit_1725464072829.png 1280w" alt="" class="header118_image2"></div>
+              <div class="header118_image-wrapper1"><img src="images/snapedit_1725464072829.png" loading="eager" sizes="(max-width: 767px) 23vw, 24vw" srcset="images/snapedit_1725464072829-p-500.png 500w, images/snapedit_1725464072829-p-800.png 800w, images/snapedit_1725464072829-p-1080.png 1080w, images/snapedit_1725464072829.png 1280w" alt="" class="header118_image1"></div>
+              <div class="header118_image-wrapper2"><img src="images/snapedit_1725464151349.png" loading="eager" sizes="(max-width: 479px) 34vw, (max-width: 767px) 35vw, 36vw" srcset="images/snapedit_1725464151349-p-500.png 500w, images/snapedit_1725464151349-p-800.png 800w, images/snapedit_1725464151349.png 1080w" alt="" class="header118_image2"></div>
               <div class="header118_image-wrapper3"><img src="images/snapedit_1725463930414.png" loading="eager" sizes="(max-width: 767px) 23vw, 24vw" srcset="images/snapedit_1725463930414-p-500.png 500w, images/snapedit_1725463930414-p-800.png 800w, images/snapedit_1725463930414.png 1105w" alt="" class="header118_image3"></div>
             </div>
           </div>
